# FastVoiceNote-Flutter

./: .gitignore  README.md  build-release.md  build_release.ps1  l10n.yaml  privacyTerms.md  pubspec.yaml  test_add_to_note.dart  test_demo_in_note_voice.dart  test_error_handling.dart  test_listt_case.dart  test_single_char_issue.dart  test_t_in_first_item.dart  test_voice_detection.dart
.agents/: whisper-documentation.md
.claude/: settings.local.json
agents/: app-shortcut-quick-voice.md  checklist-voice.md  estandar-app.md  fix-single-char-issue.md  flutter-standars.md  i18n-section.md  in-note-voice-recording.md  in-note-voice-summary.md  playstore.md  tooltip-feature.md
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
lib/: main.dart
lib/src/core/database/: app_database.dart  app_database.g.dart
lib/src/core/l10n/: app_en.arb  app_es.arb  app_pt.arb
lib/src/core/router/: app_router.dart
lib/src/core/services/: ad_service.dart  shortcut_service.dart
lib/src/core/theme/: app_theme.dart
lib/src/core/transcription/: whisper_bridge.dart
lib/src/core/utils/: quick_voice_intent.dart
lib/src/features/home/views/: home_screen.dart
lib/src/features/home/widgets/: note_card.dart
lib/src/features/notes/models/: checklist_item.dart  checklist_utils.dart  note.dart  note_block.dart  note_block_parser.dart  rich_text_utils.dart
lib/src/features/notes/providers/: notes_provider.dart
lib/src/features/notes/services/: home_widget_service.dart  image_service.dart  ocr_service.dart  share_service.dart
lib/src/features/notes/views/: drawing_canvas_screen.dart  image_preview_screen.dart  note_detail_screen.dart
lib/src/features/notes/widgets/: checklist_widget.dart  color_picker_modal.dart  create_folder_modal.dart  move_to_folder_modal.dart  note_card_widget.dart  note_options_dialog.dart  photo_options_dialog.dart  reminder_modal.dart  share_options_dialog.dart
lib/src/features/notifications/services/: notification_service.dart
lib/src/features/onboarding/views/: onboarding_screen.dart
lib/src/features/onboarding/widgets/: onboarding_content.dart  onboarding_logo_animation.dart
lib/src/features/settings/providers/: settings_provider.dart
lib/src/features/settings/services/: tooltip_service.dart
lib/src/features/transcription/utils/: audio_chunker.dart  (+6 more)
lib/src/shared/widgets/: app_drawer.dart
native/: native_lib.cpp
test/: widget_test.dart
(+16 files in other folders)
